k8s/base/authentication-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: authentication-service
  namespace: novera

spec:
  replicas: 1

  selector:
    matchLabels:
      app: authentication-service

  template:
    metadata:
      labels:
        app: authentication-service

    spec:
      containers:
        - name: authentication-service

          image: devdatir/novera-auth-service:0.2.2

          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "768Mi"

          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            failureThreshold: 30
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20
