k8s/base/cart-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-service
  namespace: novera

spec:
  replicas: 1

  selector:
    matchLabels:
      app: cart-service

  template:
    metadata:
      labels:
        app: cart-service

    spec:
      containers:
        - name: cart-service
          image: devdatir/novera-cart-service:0.2.1

          ports:
            - containerPort: 8082

          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "768Mi"

          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8082
            failureThreshold: 30
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8082
            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8082
            initialDelaySeconds: 30
            periodSeconds: 20
