k8s/base/authentication-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentication-service
  namespace: novera

spec:
  selector:
    app: authentication-service

  ports:
    - port: 8080
      targetPort: 8080

  type: ClusterIP
