k8s/base/cart-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart-service
  # namespace: novera

spec:
  selector:
    app: cart-service

  ports:
    - port: 8082
      targetPort: 8082

  type: ClusterIP
