k8s/base/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: frontend
  namespace: novera

spec:
  selector:
    app: frontend

  ports:
    - port: 80
      targetPort: 80

  type: ClusterIP
