k8s/base/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: novera

spec:
  selector:
    app: gateway-service

  ports:
    - port: 8085
      targetPort: 8085

  type: ClusterIP
