k8s/base/order-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: novera

spec:
  selector:
    app: order-service

  ports:
    - port: 8083
      targetPort: 8083

  type: ClusterIP
