k8s/base/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-db
  namespace: novera

spec:
  selector:
    app: postgres-db

  ports:
    - port: 5432
      targetPort: 5432

  type: ClusterIP
