k8s/base/product-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: product-service
  namespace: novera

spec:
  selector:
    app: product-service

  ports:
    - port: 8081
      targetPort: 8081

  type: ClusterIP
